--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ h1 {
 #header {
   font-size: 18px;
   color: white;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  background-image: url("iron.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -32,7 +32,7 @@ p {
   font-size: 23px;
   font-weight: bold;
   color: white;
-  background-image: url("css\resources\flatiron.png");
+  background-image: url("iron.png");
 }
 #footer {
   font-size: 11px;
